--- a/pipedreams-react/public/index.html
+++ b/pipedreams-react/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Staff</title>
+    <title>Staff Roster</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this.</noscript>
